--- a/TestProject/TestProject.csproj
+++ b/TestProject/TestProject.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -20,6 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Day1\Day1.csproj" />
     <ProjectReference Include="..\Day3\Day3.csproj" />
+    <ProjectReference Include="..\Day4\Day4.csproj" />
   </ItemGroup>
 
   <ItemGroup>
