--- a/TestProject/TestProject.csproj
+++ b/TestProject/TestProject.csproj
@@ -21,6 +21,7 @@
     <ProjectReference Include="..\Day1\Day1.csproj" />
     <ProjectReference Include="..\Day3\Day3.csproj" />
     <ProjectReference Include="..\Day4\Day4.csproj" />
+    <ProjectReference Include="..\Day6\Day6.csproj" />
   </ItemGroup>
 
   <ItemGroup>
